--- a/local/Locale/English/WizQst1797C8.lang
+++ b/local/Locale/English/WizQst1797C8.lang
@@ -13,10 +13,10 @@ Woof?
 汪?
 00000004
 Which you must now do. Because at the inner most chamber of this cave is its guardian, a mythical being which will transport us to the Stone of Heaven.
-你现在必须这么做，恐怖洞穴的最深处就是守护之灵【狰】的巢穴，它会把我们带到天宫之石上。
+你得继续下去，恐怖洞穴的最深处就是守护之灵【狰】的巢穴，它会把我们带到天宫之石上。
 00000005
 I knew I sensed great power in you, Scion of Bartleby. Yes, I know that too. I'm a monk after all, and thus very wise. Now, let us continue.
-我能感觉得到，在你的灵魂深处藏有一股巨大的潜能，不是吗，巴托比之裔？哈哈，对，我知道这件事，我毕竟是个僧侣，灵知是我的基本技能，不说废话了，继续走吧
+我能感觉得到，在你的灵魂深处藏有一股巨大的潜能，不是吗，巴托比之裔？哈哈，对，我知道这件事，我毕竟是个僧侣，灵知是我的基本技能，不说废话了，继续走吧！
 00000006
 *SUDDEN NOISE*
 *幽深洞穴处的嚎叫*
